# gpuflow

./: .env.example  .gitignore  Dockerfile.server  Dockerfile.worker  README.md  SPEC.md  cifar10_cnn.py  cifar10_resnet.py  docker-compose.yml  install.sh  prod.md  pyproject.toml  requirements.txt
dashboard/: app.js  index.html  style.css
docs/: index.html
gpuflow/: config.py  mlflow_server.py
gpuflow/api/: auth.py  main.py  schemas.py
gpuflow/api/routes/: debug.py  gpus.py  jobs.py  mlflow.py
gpuflow/cli/: main.py
gpuflow/db/: store.py
gpuflow/debug/: session_manager.py
gpuflow/gpu/: inspector.py
gpuflow/models/: job.py
gpuflow/runner/: docker_runner.py
gpuflow/scheduler/: scheduler.py
gpuflow/worker/: worker.py
landing/: index.html
tests/: conftest.py  test_api.py  test_gpu_inspector.py  test_scheduler.py
